src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D212_D.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    MultiLineSummaryFirstLine: ~
  location:
    row: 129
    column: 4
  end_location:
    row: 131
    column: 7
  fix: ~
  parent: ~
- kind:
    MultiLineSummaryFirstLine: ~
  location:
    row: 597
    column: 4
  end_location:
    row: 599
    column: 13
  fix: ~
  parent: ~

