src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D215_sections.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    SectionUnderlineNotOverIndented: Returns
  location:
    row: 147
    column: 4
  end_location:
    row: 153
    column: 7
  fix:
    content: "    "
    location:
      row: 150
      column: 0
    end_location:
      row: 150
      column: 9
  parent: ~
- kind:
    SectionUnderlineNotOverIndented: Returns
  location:
    row: 161
    column: 4
  end_location:
    row: 165
    column: 7
  fix:
    content: "    "
    location:
      row: 164
      column: 0
    end_location:
      row: 164
      column: 9
  parent: ~

