src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D400_D400.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    EndsInPeriod: ~
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 36
  fix:
    content: "."
    location:
      row: 2
      column: 35
    end_location:
      row: 2
      column: 35
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 40
  fix:
    content: "."
    location:
      row: 7
      column: 37
    end_location:
      row: 7
      column: 37
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 12
    column: 4
  end_location:
    row: 15
    column: 7
  fix:
    content: "."
    location:
      row: 14
      column: 28
    end_location:
      row: 14
      column: 28
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 40
  fix:
    content: "."
    location:
      row: 20
      column: 37
    end_location:
      row: 20
      column: 37
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 25
    column: 4
  end_location:
    row: 27
    column: 31
  fix:
    content: "."
    location:
      row: 27
      column: 28
    end_location:
      row: 27
      column: 28
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 32
    column: 4
  end_location:
    row: 34
    column: 52
  fix:
    content: "."
    location:
      row: 34
      column: 48
    end_location:
      row: 34
      column: 48
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 39
    column: 4
  end_location:
    row: 39
    column: 37
  fix:
    content: "."
    location:
      row: 39
      column: 36
    end_location:
      row: 39
      column: 36
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 44
    column: 4
  end_location:
    row: 44
    column: 41
  fix:
    content: "."
    location:
      row: 44
      column: 38
    end_location:
      row: 44
      column: 38
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 49
    column: 4
  end_location:
    row: 52
    column: 7
  fix:
    content: "."
    location:
      row: 51
      column: 28
    end_location:
      row: 51
      column: 28
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 57
    column: 4
  end_location:
    row: 57
    column: 41
  fix:
    content: "."
    location:
      row: 57
      column: 38
    end_location:
      row: 57
      column: 38
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 62
    column: 4
  end_location:
    row: 64
    column: 31
  fix:
    content: "."
    location:
      row: 64
      column: 28
    end_location:
      row: 64
      column: 28
  parent: ~
- kind:
    EndsInPeriod: ~
  location:
    row: 69
    column: 4
  end_location:
    row: 71
    column: 52
  fix:
    content: "."
    location:
      row: 71
      column: 48
    end_location:
      row: 71
      column: 48
  parent: ~

