src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D401_D401.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    NonImperativeMood: Returns foo.
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 22
  fix: ~
  parent: ~
- kind:
    NonImperativeMood: Constructor for a foo.
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 32
  fix: ~
  parent: ~
- kind:
    NonImperativeMood: Constructor for a boa.
  location:
    row: 14
    column: 4
  end_location:
    row: 18
    column: 7
  fix: ~
  parent: ~
- kind:
    NonImperativeMood: Runs something
  location:
    row: 22
    column: 4
  end_location:
    row: 22
    column: 24
  fix: ~
  parent: ~
- kind:
    NonImperativeMood: "Runs other things, nested"
  location:
    row: 25
    column: 8
  end_location:
    row: 25
    column: 39
  fix: ~
  parent: ~
- kind:
    NonImperativeMood: Writes a logical line that
  location:
    row: 31
    column: 4
  end_location:
    row: 33
    column: 7
  fix: ~
  parent: ~
- kind:
    NonImperativeMood: This method docstring should be written in imperative mood.
  location:
    row: 70
    column: 8
  end_location:
    row: 70
    column: 73
  fix: ~
  parent: ~
