src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D404_D.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    NoThisPrefix: ~
  location:
    row: 631
    column: 4
  end_location:
    row: 631
    column: 30
  fix: ~
  parent: ~
- kind:
    NoThisPrefix: ~
  location:
    row: 636
    column: 4
  end_location:
    row: 636
    column: 56
  fix: ~
  parent: ~

